second_attempt, with requested changes included